# 2020-2021-SECG4-Rainbow-Attack

./: .gitignore  Cargo.toml  README.md
src/: config.rs  hash.rs  main.old  parameter.1.rs  parameter.rs
